# flake-templates

./: README.md  flake.nix
c-cpp/: Makefile  flake.nix
esp-idf/: flake.nix
pwn/: .env  Dockerfile  docker-compose.yml  flake.nix
zephyr-rtos/: .clangd  flake.nix
zephyr-rtos/app/: CMakeLists.txt  west.yml
zephyr-rtos/app/boards/m5stack/m5stack_atom_echo/: Kconfig.defconfig  Kconfig.m5stack_atom_echo  board.yml  m5stack_atom_echo_appcpu.dts  m5stack_atom_echo_appcpu.yaml  m5stack_atom_echo_procpu.dts  m5stack_atom_echo_procpu.yaml
zephyr-rtos/app/src/: main.c
